Fixes enums c#